--- a/frontend/.storybook/preview-head.html
+++ b/frontend/.storybook/preview-head.html
@@ -4,3 +4,13 @@
   href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
   rel="stylesheet"
 />
+<style>
+  body {
+    font-family: 'Helvetica Neue', 'Helvetica', 'Hiragino Sans', 'Hiragino Kaku Gothic ProN',
+      'Arial', 'Yu Gothic', 'Meiryo', sans-serif;
+    font-size: 16px;
+    line-height: 2;
+    color: var(--black-color);
+    background: var(--base-color);
+  }
+</style>
